25 + 5 Clock: Fix text size on small screens
Make text size large only on large screens and change the look
of the timer buttons to be in a row only on a reasonably large width.

--- a/25-plus-5-clock/src/index.css
+++ b/25-plus-5-clock/src/index.css
@@ -48,3 +48,9 @@ body {
     scale: 1;
   }
 }
+
+@media screen and (min-width: 690px) {
+  :root {
+    font-size: 1.25rem;
+  }
+}
